[gd_scene load_steps=2 format=2]

[ext_resource path="res://trade/Trade.gd" type="Script" id=2]

[node name="Trade" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -386.0
margin_top = -175.0
margin_right = 414.0
margin_bottom = 207.0
rect_min_size = Vector2( 800, 382 )
rect_pivot_offset = Vector2( 607, 226 )
script = ExtResource( 2 )

[node name="Buy" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 23.0
margin_right = -16.0
margin_bottom = -21.0

[node name="Top" type="HBoxContainer" parent="Buy"]
margin_right = 760.0
margin_bottom = 14.0

[node name="WindowLabel" type="Label" parent="Buy/Top"]
margin_right = 133.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Item"

[node name="WindowLabel2" type="Label" parent="Buy/Top"]
margin_left = 137.0
margin_right = 271.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Available"
align = 1

[node name="WindowLabel3" type="Label" parent="Buy/Top"]
margin_left = 275.0
margin_right = 408.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Price"
align = 1

[node name="DateLabelTemp" type="Label" parent="Buy/Top"]
margin_left = 412.0
margin_right = 546.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Date"
align = 1

[node name="Label" type="Label" parent="Buy/Top"]
margin_left = 550.0
margin_right = 760.0
margin_bottom = 14.0
rect_min_size = Vector2( 210, 0 )
size_flags_horizontal = 3
align = 2

[node name="HSeparator" type="HSeparator" parent="Buy"]
margin_top = 18.0
margin_right = 760.0
margin_bottom = 22.0

[node name="BuyList" type="ScrollContainer" parent="Buy"]
margin_top = 26.0
margin_right = 760.0
margin_bottom = 126.0
rect_min_size = Vector2( 735, 100 )

[node name="VBoxContainer" type="VBoxContainer" parent="Buy/BuyList"]

[node name="Sell" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = 160.0
margin_right = -25.0
margin_bottom = -9.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Sell"]
margin_right = 754.0
margin_bottom = 14.0

[node name="Row Labels" type="HBoxContainer" parent="Sell/VBoxContainer2"]
margin_right = 754.0
margin_bottom = 14.0

[node name="WindowLabel" type="Label" parent="Sell/VBoxContainer2/Row Labels"]
margin_right = 248.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Item"

[node name="WindowLabel3" type="Label" parent="Sell/VBoxContainer2/Row Labels"]
margin_left = 252.0
margin_right = 501.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Week Aquired"
align = 1

[node name="WindowLabel10" type="Label" parent="Sell/VBoxContainer2/Row Labels"]
margin_left = 505.0
margin_right = 754.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Sell"
align = 1

[node name="HSeparator" type="HSeparator" parent="Sell"]
margin_top = 18.0
margin_right = 754.0
margin_bottom = 22.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 25.0
margin_top = 205.0
margin_right = 775.0
margin_bottom = 355.0
rect_min_size = Vector2( 750, 150 )

[node name="ItemSellContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 735.0
margin_bottom = 150.0
rect_min_size = Vector2( 735, 150 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 631.0
margin_top = 261.0
margin_right = 895.0
margin_bottom = 391.0
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Info" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -11.0
margin_bottom = -33.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Info"]
margin_right = 241.0
margin_bottom = 68.0

[node name="Time" type="HBoxContainer" parent="ColorRect/Info/VBoxContainer"]
margin_right = 241.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="ColorRect/Info/VBoxContainer/Time"]
margin_right = 241.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "1 Week Gone, 51 Remaining"
align = 1

[node name="Money" type="HBoxContainer" parent="ColorRect/Info/VBoxContainer"]
margin_top = 18.0
margin_right = 241.0
margin_bottom = 32.0

[node name="WindowLabel" type="Label" parent="ColorRect/Info/VBoxContainer/Money"]
margin_right = 118.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Money:"
align = 2

[node name="Label" type="Label" parent="ColorRect/Info/VBoxContainer/Money"]
margin_left = 122.0
margin_right = 241.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "$10"

[node name="Ship Level" type="HBoxContainer" parent="ColorRect/Info/VBoxContainer"]
margin_top = 36.0
margin_right = 241.0
margin_bottom = 50.0

[node name="WindowLabel" type="Label" parent="ColorRect/Info/VBoxContainer/Ship Level"]
margin_right = 118.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Ship Level:"
align = 2

[node name="Label" type="Label" parent="ColorRect/Info/VBoxContainer/Ship Level"]
margin_left = 122.0
margin_right = 241.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "1"

[node name="InventorySpace" type="HBoxContainer" parent="ColorRect/Info/VBoxContainer"]
margin_top = 54.0
margin_right = 241.0
margin_bottom = 68.0

[node name="WindowLabel" type="Label" parent="ColorRect/Info/VBoxContainer/InventorySpace"]
margin_right = 118.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Inventory Space:"
align = 2

[node name="Label" type="Label" parent="ColorRect/Info/VBoxContainer/InventorySpace"]
margin_left = 122.0
margin_right = 241.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "0/30"

[node name="Close" type="Button" parent="ColorRect/Info"]
margin_top = 72.0
margin_right = 241.0
margin_bottom = 107.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
text = "Close Menu"

[connection signal="pressed" from="ColorRect/Info/Close" to="." method="_on_Close_pressed"]
